FreeST/test/Programs/ValidTests/Functional/doubleUnderscore/doubleUnderscore.fst
f : Char -> Int -> Bool
f _ _ = True

main : Bool
main = f 'a' 5
