FreeST/test/Programs/InvalidTests/linArgNotConsumed/linArgNotConsumed.fst
f : !Int -> Char
f shouldBeConsumed = 'a'

main : Int
main = 5
